8289764: gc/lock tests failed with "OutOfMemoryError: Java heap space: failed reallocation of scalar replaced objects"
Reviewed-by: mdoerr
Backport-of: 7b81a9c75d60f6eb2727515bacfffcf7cf15e128